--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "p5.flex": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "shadox": "^0.1.0",
     "simplex-noise": "^4.0.1"
   },
   "devDependencies": {
